# streamlit-calendar

./: .gitignore  MANIFEST.in  build.py  build_with_npm.py  pyproject.toml
.github/workflows/: ci.yml
streamlit_calendar/: hatch_build.py
streamlit_calendar/frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
streamlit_calendar/frontend/src/: index.tsx
