[project]
name = "streamlit-calendar-fork"
version = "1.3.1"
description = "📆 A Streamlit component to show callendar using FullCalendar (https://fullcalendar.io)"
authors = [{name = "Muhammad Luqman", email = "im.imperativa@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["streamlit", "streamlit-component"]

# Main dependencies
dependencies = [
    "streamlit>=1.12.0,<2.0.0"
]

[project.urls]
Repository = "https://github.com/im-perativa/streamlit-calendar"

[tool.poetry]
packages = [{include = "streamlit_calendar"}]
include = [
    "streamlit_calendar/*.py",
    "streamlit_calendar/frontend/build/**/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
streamlit = ">=1.12.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
watchdog="2.1.9"
black="^22.6.0"
isort="^5.10.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-with-npm = "build_with_npm:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
